--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: flimg
     spec:
       containers:
-      - image: hruthingali/myimage
+      - image: santhosh2010/myimage
         name: myimage
         resources: {}
 status: {}
